--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                             <!-- <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li> -->
                             <li><a href="#wedding">BODA</a></li>
                             <li><a href="#accomodations">SAYULITA</a></li>
-                            <li><a href="#registry">REGISTRY/RSVP</a></li>
+                            <li><a href="#rsvp">RSVP</a></li>
+                            <li><a href="#registry">REGISTRY</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
@@ -344,12 +345,9 @@
 
                     </section>
 
-                    <section id="registry" class="clearfix">
+                    <section id="rsvp" class="clearfix">
 
-                        <h1>RSVP</h1> 
-
-                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div>
-                        
+                        <!-- <h1>RSVP</h1> -->
                         
                         <div class="column full" >
                             <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="100%" height="1630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
@@ -371,6 +369,14 @@
 
                     </section>
 
+                    <section id="registry" class="clearfix">
+
+                         <h1>Registry</h1> 
+                        <br/>
+                        <br/>
+                        <br/>
+                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div>
+                    </section>
                     <div style="height: 300px"></div>
 
                 </div> <!-- #main -->
