--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="css/main-1.6.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -152,8 +153,8 @@
                             <p>
                                 VIERNES, 8 DE DICIEMBRE<br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                9 AM a 3 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
-                                5 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
+                                9 AM a 5 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
+                                7 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
                                 S&Aacute;BADO, 9 DE DICIEMBRE <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 <!-- DOMINGO, 10 DE DICIEMBRE <br /> -->
@@ -254,9 +255,10 @@
                         <div class="column right">
                             <h2>COMO LLEGAR</h2>
                              <p>
+
                                 Tomar vuelo a Puerto Vallarta (PVR) y de ah&iacute; tomar un taxi a Sayulita.
                                 El taxi a Sayulita sale en $850 pesos con <a href="http://www.tripvallarta.com">Trip Vallarta</a>.
-                                Recomendamos tomarlos en grupo.
+                                Recomendamos tomarlos en grupo. Usen esta hoja para organizar taxis en grupo: <a href="https://docs.google.com/spreadsheets/d/1jegjbiGU8ltDbmfBmjti89IJElqbEgfYiat7xl3COFk/edit?usp=sharing">WEDDING GROUP 🚕 ORGANIZER</a> <br />
                                 <br /><br />
                                 Alternativamente, uno puede tomar un cami&oacute;n
                                 a Sayulita por $40 pesos/persona. El cami&oacute;n pasa justo en frente del aeropuerto,
@@ -348,7 +350,7 @@
                     <section id="rsvp" class="clearfix">
 
                         <!-- <h1>RSVP</h1> -->
-                        
+
                         <div class="column full" >
                             <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="100%" height="1630" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></p>
 
@@ -371,11 +373,11 @@
 
                     <section id="registry" class="clearfix">
 
-                         <h1>Registry</h1> 
+                         <h1>Registry</h1>
                         <br/>
                         <br/>
-                        <br/>
-                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div>
+                        <!-- <br/>
+                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div> -->
                     </section>
                     <div style="height: 300px"></div>
 
@@ -384,6 +386,25 @@
         </div> <!-- #bg-container -->
 
         <script src="js/main-1.6.js"></script>
+
+<!-- Function to make scrolling work in Chrome -->
+        <script>
+        $(function() {
+            $('a[href*="#"]:not([href="#"])').click(function() {
+                if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+                    var target = $(this.hash);
+                    target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+                if (target.length) {
+                    $('html, body').animate({
+                    scrollTop: target.offset().top
+                    }, 1000);
+             return false;
+            }
+            }
+            });
+        });
+        </script>
+
 
 
         <script>
