--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                             <p>
                                 VIERNES, 8 DE DICIEMBRE<br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                9 AM a 5 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
-                                7 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
+                                8 AM a 5 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
+                                7 PM a 9 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
                                 S&Aacute;BADO, 9 DE DICIEMBRE <br />
                                 5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
                                 <!-- DOMINGO, 10 DE DICIEMBRE <br /> -->
@@ -376,8 +376,8 @@
                          <h1>Registry</h1>
                         <br/>
                         <br/>
-                        <!-- <br/>
-                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div> -->
+                        <br/>
+                        <div class="column full" align="center"><a href="http://www.wanderable.com/hm/anaydaniel" target="_blank"><img alt="My Wanderable Honeymoon Registry" src="http://res.cloudinary.com/wanderable/image/upload/c_scale,w_375/v1398120426/wanderable_hm.jpg"></a></div>
                     </section>
                     <div style="height: 300px"></div>
 
