adding english version

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <li><a href="#accomodations">SAYULITA</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
                             <li><a href="#registry">REGISTRY</a></li>
+                            <li><a href="en.html">🇺🇸</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
