fixing english website

--- a/en.html
+++ b/en.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>Ana y Daniel</title>
-        <meta name="description" content="Bienvenidos a la p&aacute;gina de la boda de Ana y Daniel">
+        <title>Ana and Daniel</title>
+        <meta name="description" content="Welcome to our wedding website">
 
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
@@ -46,11 +46,11 @@
                     <nav id="nav">
                         <ul>
                             <!-- <li><a href="#brideandgroom">THE BRIDE &amp; GROOM</a></li> -->
-                            <li><a href="#wedding">BODA</a></li>
+                            <li><a href="#wedding">WEDDING</a></li>
                             <li><a href="#accomodations">SAYULITA</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
                             <li><a href="#registry">REGISTRY</a></li>
-                            <li><a href="en.html">🇺🇸</a></li>
+                            <li><a href="http://anaydaniel.org">🇲🇽</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
@@ -64,79 +64,27 @@
                     <header>
                         <div id="introtext">
                             <!-- <span class="head-sarah">Ana</span> -->
-                            <span class="head-brad">Ana y Daniel</span>
-                            <div class="date">9 de Diciembre 2017</div>
+                            <span class="head-brad">Ana and Daniel</span>
+                            <div class="date">December 9th, 2017</div>
                         </div>
 
                     </header>
 
                     <div class="clearfix"></div>
 
-                    <!-- <section id="brideandgroom" class="clearfix">
-
-                        <h1>The Bride and Groom</h1>
-
-                        <div class="column left">
-
-                            <h2>SARAH</h2>
-                            <p>
-                                <img src="img/sarahThumb.jpg" class="thumb" alt="Sarah" />
-                                Sarah is most thankful to her parents for the gift of two loving big brothers &amp; five amazing role-model sisters. As the second-youngest, Sarah spent her childhood twirling &amp; dancing around, putting on talent shows for her parents &amp; grandparents. Her creative spirit and eye for design was established at a young age, as she highly disapproved of Mattel’s © furnishings and décor within her Barbie House. If Barbie needed an interior makeover (which was frequent) Sarah looked through Sunday newspaper ads &amp; IKEA magazines for inspiration, drew the new contents by hand and placed them as backdrops in the Barbie house. After graduation from Mater Dei High School, Sarah explored the metropolitan life in San Francisco and graduated with a BS in Interior Design from San Francisco State University. Sarah is adding to her vows that she will forever allow a one-room “man-den” with it’s contents and décor subject to Bradley’s discretion.</p>
-
-                        </div>
-                        <div class="column right">
-
-                            <h2>BRADLEY</h2>
-                            <p>
-                                <img src="img/bradThumb.jpg" class="thumb" alt="Brad" />
-                                Born in Mission Viejo, California, Bradley spent half of his life living with his mother in San Diego and half with his wonderful Wisconsin family. Bradley grew up playing ice hockey while secretly learning how to build computers. Half jock, half nerd, he has cultivated these interests well into his adult life, that make him who he is today. After his graduation from the University of San Francisco with a degree in Information Systems, Bradley worked for Yahoo! for seven years, and continued to explore the tech startup scene in  San Francisco. With an entrepreneurial spirit and passion for technology, Bradley now runs his own software company, Scal.io, building hand-crafted mobile,  web, and desktop apps for tech companies in the Silicon Valley and beyond. Bradley is adding to his vows a lifetime IT guarantee to Sarah, that he will be readily available 24/7 to troubleshoot... anything &amp; everything technical.</p>
-
-                        </div>
-
-                        <div class="clearfix"></div>
-
-                        <div class="column full">
-                            <div class="hr-t"></div>
-                            <div class="hr-b"></div>
-                        </div>
-
-                        <div class="column full">
-
-                            <h2>HOW WE MET</h2>
-                            <p>In 2010 the two were both wild and running free around San Francisco’s Marina District, as most singles do. Bradley was quite the bachelor- planning weekend getaways with friends, float trips, and taking last minute trips to Ibiza, Cabo, wherever the wind blew. Sarah was quite the bachelorette, wining and dining around San Francisco, on a strict agenda which included over-extending herself, saying yes to every social engagement that came her way.  After a mutual friend of the two suggested they would make a cute couple, a date was on the books and they began to discover just how compatible they were. In no time, they also discovered they were inseparable and very in love. The rest is history- they’ve shared some amazing adventures around the world, each other's toothbrushes, and now they’re ready to share the rest of their lives together, too.</p>
-
-                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeoOxo5RulmWVwIl0PETNcyZJlsVW4bby8WOu6kNc-8RFozVQ/viewform?embedded=true" width="760" height="1110" frameborder="0" marginheight="0" marginwidth="0" align="center">Loading...</iframe>
-
-                        </div>
-
-                        <div class="column full">
-
-                            <figure class="responsive-image proposal" data-media="img/onknee-small.jpg" data-media480="img/onknee-small.jpg" data-media768="img/onknee-medium.jpg" data-media1140="img/onknee-large.jpg" title="Brad Proposing To Sarah">
-                                <noscript>
-                                    <img src="img/onknee-large.jpg" alt="Brad Proposing To Sarah" />
-                                </noscript>
-                            </figure>
-
-                            <h2>THE ENGAGEMENT</h2>
-                            <p>Down in San Diego for a weekend to visit Bradley’s mom, the pair decided to spend the beautiful morning at Balboa Park. After returning to their hotel, Bradley asked Sarah to run up to their room for a bottle of wine that had been chilling. Bradley said he was going to ask concierge for a “wine opener” and that he’d meet her in the courtyard. As Sarah opened the door to the room, she “freaked out”, thinking she was in the wrong room. It was decorated with bouquets of her favorite flowers, decadent treats and champagne. Rose petals on the floor led her to the open balcony, and as she walked out she saw Bradley waiting for her down below, with a huge grin on his face. And like out of a fairy tale, Romeo asked Juliet to be his wife. She giggled, and said yes. Bradley had it all captured by a hidden, sniper-style photographer.</p>
-
-                        </div>
-
-                    </section> -->
-
 
                     <section id="wedding" class="clearfix">
 
-                        <h1>Boda</h1>
+                        <h1>Wedding</h1>
 
                         <div class="column full">
 
-                            <h2>CEREMONIA</h2>
+                            <h2>CEREMONY</h2>
                             <p>
-                                Frente Al Punto<br />
+                                <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87193, -105.43823">Frente al Punto</a><br />
                                 Calle Playa Azul 17, Sayulita<br />
-                                Nayarit, M&eacute;xico <br /><br />
-                                S&aacute;bado, 9 de diciembre 2017 <br />
+                                Nayarit, Mexico <br /><br />
+                                Saturday, December 9th, 2017 <br />
                                 5:00 PM  <br />
                                 <br />
 
@@ -150,14 +98,13 @@
 
                         </div><!--end column-->
                         <div class="column full">
-                            <h2>ITINERARIO</h2>
+                            <h2>ITINERARY</h2>
                             <p>
-                                VIERNES, 8 DE DICIEMBRE<br />
-                                <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                8 AM a 5 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
-                                7 PM a 9 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
-                                S&Aacute;BADO, 9 DE DICIEMBRE <br />
-                                5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
+                                FRIDAY, DECEMBER 8TH<br />
+                                8 AM to 5 PM --- Boat trip to Yelapa --- Departure at 8 am in front of the <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobanana</a><br />
+                                7 PM to 9 PM --- Welcome cocktail at <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
+                                SATURDAY, DECEMBER 9TH<br />
+                                5 PM --- Ceremony and Party at <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87193, -105.43823">Frente al Punto</a><br /><br />
                                 <!-- DOMINGO, 10 DE DICIEMBRE <br /> -->
                                 <!-- 11 AM - Desayuno y voleibol<br /> -->
 
@@ -209,9 +156,9 @@
 
                         <div class="column left">
 
-                            <h2>HOTELES</h2>
+                            <h2>HOTELS</h2>
                             <p>
-                                Casa Nawalli (LLeno)<br />
+                                Casa Nawalli (Full)<br />
                                 Miramar 13<br />
                                 <a href="https://www.casanawalli.com">Website</a> <br />
                                 <!-- <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br /> -->
@@ -254,34 +201,32 @@
                         </div><!--end column-->
 
                         <div class="column right">
-                            <h2>COMO LLEGAR</h2>
+                            <h2>GETTING THERE</h2>
                              <p>
 
-                                Tomar vuelo a Puerto Vallarta (PVR) y de ah&iacute; tomar un taxi a Sayulita.
-                                El taxi a Sayulita sale en $850 pesos con <a href="http://www.tripvallarta.com">Trip Vallarta</a>.
-                                Recomendamos tomarlos en grupo. Usen esta hoja para organizar taxis en grupo: <a href="https://docs.google.com/spreadsheets/d/1jegjbiGU8ltDbmfBmjti89IJElqbEgfYiat7xl3COFk/edit?usp=sharing">WEDDING GROUP 🚕 ORGANIZER</a> <br />
+                                Fly to Puerto Vallarta (PVR) and take a taxi to Sayulita. Taxis are $850 pesos with <a href="http://www.tripvallarta.com">Trip Vallarta</a>.
+                                We recommend sharing taxis. You can use this page to organize sharing a taxi: <a href="https://docs.google.com/spreadsheets/d/1jegjbiGU8ltDbmfBmjti89IJElqbEgfYiat7xl3COFk/edit?usp=sharing">GROUP 🚕 ORGANIZER</a> <br />
                                 <br /><br />
-                                Alternativamente, uno puede tomar un cami&oacute;n
-                                a Sayulita por $40 pesos/persona. El cami&oacute;n pasa justo en frente del aeropuerto,
-                                cruzando la carretera. El <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=18&ll=20.67751, -105.24762">lugar preciso de la parada</a> est&aacute; marcado en el mapa de la
-                                p&aacute;gina (hay que hacer zoom-out de Sayulita para ver el Aeropuerto de Puerto Vallarta). <br /><br />
+                                You can also take a bus to Sayulita for $40 pesos. The bus stop is across the street from the airport.
+                                We marked the <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=18&ll=20.67751, -105.24762">exact location</a> of the bus stop on a map below (zoom out from Sayulita to see PVR airport).
+                                <br /><br />
                                 <br />
                             </p>
-                            <h2>COMIDA</h2>
+                            <h2>FOOD</h2>
                                 <p>
-                                Mariscos / seafood<br />
+                                Seafood<br />
                                 <a href="https://www.tripadvisor.com/Restaurant_Review-g445056-d3687104-Reviews-El_Jakal_seafood-Sayulita_Pacific_Coast.html">El Jakal</a><br />
                                 <a href="https://www.yelp.com/biz/barracuda-sayulita">Barracuda</a><br />
                                 <a href="https://www.yelp.com/biz/bichos-sayulita">Bichos</a><br />
                                 <br />
-                                Unas fr&iacute;as / beer<br />
+                                Beer<br />
                                 <a href="https://www.yelp.com/biz/palmar-trapiche-sayulita">Palmar trapiche</a><br />
                                 <br />
-                                Comida mexicana / mexican food<br />
+                                Mexican Food<br />
                                 <a href="https://www.yelp.com/biz/yeikame-sayulita">Yeikame</a><br />
                                 <a href="https://www.yelp.com/biz/natys-cocina-sayulita">Naty's</a><br />
                                 <br />
-                                Desayunos / breakfast<br />
+                                Breakfast<br />
                                 <a href="https://www.yelp.it/biz/paninos-sayulita">Paninos</a><br />
                                 <a href="https://www.yelp.com/biz/yah-yah-caf%C3%A9-sayulita">Yah-Yah Cafe</a><br />
                                 </p>
@@ -302,7 +247,7 @@
 
                         <div class="column full">
 
-                            <h2>MAPA DE SAYULITA</h2>
+                            <h2>MAP OF SAYULITA</h2>
 
                             <div id="gmap">
                                 <div class="overlay" onclick="style.pointerEvents='none'"></div>
