--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <li><a href="#accomodations">SAYULITA</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
                             <li><a href="#registry">REGISTRY</a></li>
-                            <li><a href="en.html">🇺🇸</a></li>
+                            <li><a href="http://anaydaniel.org/en.html">🇺🇸</a></li>
                             <!-- <li><a href="http://sarahlovesbradley.tumblr.com" target="_blank">BLOG</a></li> -->
                         </ul>
 
@@ -133,7 +133,7 @@
 
                             <h2>CEREMONIA</h2>
                             <p>
-                                Frente Al Punto<br />
+                                <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87193, -105.43823">Frente al Punto</a><br />
                                 Calle Playa Azul 17, Sayulita<br />
                                 Nayarit, M&eacute;xico <br /><br />
                                 S&aacute;bado, 9 de diciembre 2017 <br />
@@ -154,10 +154,10 @@
                             <p>
                                 VIERNES, 8 DE DICIEMBRE<br />
                                 <!-- 4 a 7 PM  Despedida para Ana (s&oacute;lo mujeres) Don Pedro's<br /> -->
-                                8 AM a 5 PM --- Tour en barco a las <a href="https://es.wikipedia.org/wiki/Islas_Marietas">Islas Marietas</a> (cupo limitado) --- Salida a las 9 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobana</a>.<br />
+                                8 AM a 5 PM --- Tour en barco a Yelapa --- Salida a las 8 en punto del <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.86931, -105.44069">Chocobanana</a><br />
                                 7 PM a 9 PM --- Coctel de bienvenida --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87006, -105.44155">Don Pedro's</a><br /><br />
                                 S&Aacute;BADO, 9 DE DICIEMBRE <br />
-                                5 PM --- Ceremonia y fiesta --- Frente al Punto <br /><br />
+                                5 PM --- Ceremonia y fiesta --- <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87193, -105.43823">Frente al Punto</a> <br /><br />
                                 <!-- DOMINGO, 10 DE DICIEMBRE <br /> -->
                                 <!-- 11 AM - Desayuno y voleibol<br /> -->
 
@@ -259,7 +259,7 @@
 
                                 Tomar vuelo a Puerto Vallarta (PVR) y de ah&iacute; tomar un taxi a Sayulita.
                                 El taxi a Sayulita sale en $850 pesos con <a href="http://www.tripvallarta.com">Trip Vallarta</a>.
-                                Recomendamos tomarlos en grupo. Usen esta hoja para organizar taxis en grupo: <a href="https://docs.google.com/spreadsheets/d/1jegjbiGU8ltDbmfBmjti89IJElqbEgfYiat7xl3COFk/edit?usp=sharing">WEDDING GROUP 🚕 ORGANIZER</a> <br />
+                                Recomendamos tomarlos en grupo. Usen esta hoja para organizar taxis en grupo: <a href="https://docs.google.com/spreadsheets/d/1jegjbiGU8ltDbmfBmjti89IJElqbEgfYiat7xl3COFk/edit?usp=sharing">ORGANIZADOR DE 🚕 A SAYULITA</a> <br />
                                 <br /><br />
                                 Alternativamente, uno puede tomar un cami&oacute;n
                                 a Sayulita por $40 pesos/persona. El cami&oacute;n pasa justo en frente del aeropuerto,
@@ -269,19 +269,19 @@
                             </p>
                             <h2>COMIDA</h2>
                                 <p>
-                                Mariscos / seafood<br />
+                                Mariscos<br />
                                 <a href="https://www.tripadvisor.com/Restaurant_Review-g445056-d3687104-Reviews-El_Jakal_seafood-Sayulita_Pacific_Coast.html">El Jakal</a><br />
                                 <a href="https://www.yelp.com/biz/barracuda-sayulita">Barracuda</a><br />
                                 <a href="https://www.yelp.com/biz/bichos-sayulita">Bichos</a><br />
                                 <br />
-                                Unas fr&iacute;as / beer<br />
+                                Unas fr&iacute;as<br />
                                 <a href="https://www.yelp.com/biz/palmar-trapiche-sayulita">Palmar trapiche</a><br />
                                 <br />
-                                Comida mexicana / mexican food<br />
+                                Comida mexicana<br />
                                 <a href="https://www.yelp.com/biz/yeikame-sayulita">Yeikame</a><br />
                                 <a href="https://www.yelp.com/biz/natys-cocina-sayulita">Naty's</a><br />
                                 <br />
-                                Desayunos / breakfast<br />
+                                Desayunos<br />
                                 <a href="https://www.yelp.it/biz/paninos-sayulita">Paninos</a><br />
                                 <a href="https://www.yelp.com/biz/yah-yah-caf%C3%A9-sayulita">Yah-Yah Cafe</a><br />
                                 </p>
