--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                             <!-- <span class="head-sarah">Ana</span> -->
                             <span class="head-brad">Ana y Daniel</span>
                             <div class="date">9 de Diciembre 2017</div>
+                            <img src="img/ayd-medium.jpg" style="width:100%;" border="0" alt="Ana y Daniel" />
                         </div>
 
                     </header>
