--- a/en.html
+++ b/en.html
@@ -66,6 +66,7 @@
                             <!-- <span class="head-sarah">Ana</span> -->
                             <span class="head-brad">Ana and Daniel</span>
                             <div class="date">December 9th, 2017</div>
+                            <img src="img/ayd-medium.jpg" style="width:100%;" border="0" alt="Ana y Daniel" />
                         </div>
 
                     </header>
