--- a/en.html
+++ b/en.html
@@ -193,7 +193,7 @@
                                 <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
                                 <!-- $230 - $265 USD<br /> -->
                                 <!-- <br /> -->
-                                M&aacute;s opciones<br />
+                                More options<br />
                                 <a href="http://www.sayulitalife.com">Sayulita Life</a> <br />
                                 <a href="https://www.airbnb.com/s/Sayulita--Mexico/homes?adults=2&allow_override%5B%5D=&checkin=2017-12-07&checkout=2017-12-10&guests=2&pets=false">Airbnb</a> <br />
 
