adding dress code

--- a/en.html
+++ b/en.html
@@ -84,11 +84,15 @@
                             <p>
                                 <a href="https://drive.google.com/open?id=1iaY4ybuKTj8eXKJw7gY1C-4NB0U&usp=sharing&z=19&ll=20.87193, -105.43823">Frente al Punto</a><br />
                                 Calle Playa Azul 17, Sayulita<br />
-                                Nayarit, Mexico <br /><br />
+                                Nayarit, Mexico <br />
                                 Saturday, December 9th, 2017 <br />
                                 5:00 PM  <br />
                                 <br />
 
+                                DRESS CODE<br />
+                                Cocktail dress<br />
+                                Suit or <a href="https://en.wikipedia.org/wiki/Guayabera">guayabera</a><br />
+                                The party will be in a garden<br />
                                 <br />
 
                                 <!-- <img src="img/theinn-large.png" class="theinn" alt="The Inn at Rancho Santa Fe" /> -->
@@ -159,32 +163,26 @@
 
                             <h2>HOTELS</h2>
                             <p>
-                                Casa Nawalli (Full)<br />
+                                <a href="https://www.casanawalli.com">Casa Nawalli (Full)</a> <br />
                                 Miramar 13<br />
-                                <a href="https://www.casanawalli.com">Website</a> <br />
                                 <!-- <a href="tel:52-329-291-3087">+52 (329) 291 3087</a> <br /> -->
                                 $120 --- $180 USD<br />
                                 <br />
-                                Los Almendros<br />
+                                <a href="http://www.losalmendrossayulita.com">Los Almendros</a> <br />
                                 Calle Chiripa 19<br />
-                                <a href="http://www.losalmendrossayulita.com">Website</a> <br />
                                 $215 -- $245 USD (2 Bedroom Villa)<br />
                                 <br />
-                                Hotelito Los Sue&ntilde;os<br />
+                                <a href="http://www.hotelitolossuenos.com">Hotelito Los Sue&ntilde;os</a> <br />
                                 Calle Rosalio Tapia 10<br />
-                                <a href="http://www.hotelitolossuenos.com">Website</a> <br />
                                 $145 -- $183 USD<br />
                                 <br />
-                                Casa Love<br />
+                                <a href="http://casalove.pachamamasayulita.com">Casa Love</a> <br />
                                 Delfines 9<br />
-                                <a href="http://casalove.pachamamasayulita.com">Website</a> <br />
                                 <!-- <a href="tel:52-329-291-3010">+52 (329) 291 3010</a> <br /> -->
                                 $80 --- $150 USD<br />
                                 <br />
-                                Hotel Hafa<br />
+                                <a href="http://hotelhafasayulita.com">Hotel Hafa</a> <br />
                                 Jos&eacute; Marisal 4<br />
-                                <a href="http://hotelhafasayulita.com">Website</a> <br />
-                                <a href="tel:52-329-291-3806">+52 (329) 291 3806</a> <br />
                                 $50 --- $85 USD<br />
                                 <br />
                                 <!-- Villa Amor<br /> -->
@@ -230,8 +228,8 @@
                                 Breakfast<br />
                                 <a href="https://www.yelp.it/biz/paninos-sayulita">Paninos</a><br />
                                 <a href="https://www.yelp.com/biz/yah-yah-caf%C3%A9-sayulita">Yah-Yah Cafe</a><br />
+                                <a href="https://www.yelp.com/biz/yeikame-sayulita">Yeikame</a><br />
                                 </p>
-
 
 
 
